Refactor interpreter calculators inplementations