@@ -78,9 +78,17 @@
 						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator=ALL-UNNAMED
 						--add-opens
-						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.arithmetic=ALL-UNNAMED
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.arithmetic.binary=ALL-UNNAMED
 						--add-opens
-						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.logical=ALL-UNNAMED
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.arithmetic.unary=ALL-UNNAMED
+						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.bitwise.binary=ALL-UNNAMED
+						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.bitwise.unary=ALL-UNNAMED
+						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.logical.binary=ALL-UNNAMED
+						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.logical.unary=ALL-UNNAMED
 						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.model=ALL-UNNAMED
 					</argLine>
